--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Блог</a>
             <a href="{{ site.baseurl }}/about">Описание</a>
+            <a href="https://t.me/igoose_me">Канал</a>
           </nav>
         </header>
       </div>
